# SwiftTrack

./: .gitignore  DEPLOYMENT.md  README.md  pom.xml
.github/workflows/: sdk-ci-cd.yml  train-and-publish.yml
EurekaServer/: pom.xml
backend/: .gitignore  pom.xml  readme.md
backend/.github/workflows/: train-and-publish.yml
backend/ai-ml/ml/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/common/: pom.xml
backend/common/DTO/: RegisterUser.java
backend/deployment/: docker-compose-kafka.yml
backend/docs/AdminService/: README.md
backend/docs/Issues-encountered/: serviceDiscoveryWithGateway.md
backend/docs/NotificationService/: README.md
backend/docs/ai-services/: AIDISPATCHSERVICE.md  driver_memory_embedding_implementation.md
backend/docs/database-architecture/: database-overview.md  liquibase-migration-guide.md
backend/docs/debugging-guides/: API-Error-Handling.md
backend/docs/distributed-caching/: Distributed_Caching.md
backend/docs/env-configuration/: ENV_CONFIGURATION.md
backend/docs/http_client/: HTTP_CLIENT_USAGE.md
backend/docs/kafka-integrations/: KAFKA_INTEGRATION.md
backend/docs/ml-docs/: ML_Architecture_and_Flow.md  ML_Model_Deep_Dive.md  mlFeatureGuide.md
backend/docs/notes/: jpaInterviewNotes.md
backend/docs/order-assignment/: orderAssignment.md
backend/docs/order-service/: README.md
backend/docs/project-overview/: overview.md
backend/docs/project-structure/: root-folder-setup.md
backend/docs/project-user-and-flows/: actorsAndFlow.md
backend/docs/technical-guides/: async-order-processing.md  driver-service-overview.md  kd-tree-driver-dispatch-integration.md
backend/docs/why-swiftrack/: whySwifttrack.md
backend/infra/: infra.md
backend/mcp/: .env  server.py
backend/mcp/swifttrack_mcp/: main.py
backend/mcp/utils/: httpx_client.py
backend/scripts/: populate-providers.sql
backend/sdk/: .env.example  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
backend/sdk/docs/: accounts.md  addresses.md  authentication.md  changelog.md  contributing.md  index.md  installation.md  orders.md  quickstart.md
backend/sdk/docs/api/: client.md  exceptions.md  models.md
backend/sdk/src/swifttrack/: __init__.py  account.py  address.py  auth.py  client.py  config.py  exceptions.py  order.py
backend/sdk/src/swifttrack/models/: __init__.py  account.py  address.py  auth.py  order.py
backend/sdk/src/swifttrack/utils/: __init__.py  http_client.py  retry.py
backend/sdk/tests/: __init__.py  test_account.py  test_address.py  test_auth.py  test_config.py  test_exceptions.py  test_order.py
backend/services/: optimize_pools.py
backend/services/AIDispatchService/: pom.xml
backend/services/AdminService/: pom.xml
backend/services/AuthService/: pom.xml
backend/services/BillingAndSettlementService/: liquibase.properties.template  pom.xml
backend/services/DriverService/: .env  pom.xml
backend/services/EurekaServer/: pom.xml
backend/services/Gateway/: pom.xml
backend/services/MapService/: .env  .gitignore  Dockerfile  README.md  pom.xml  (+2 more)
docs/: swifttrack_portfolio.md  swifttrack_resume.md
frontend/: .gitignore  README.md  design_system.md  doc.md  nx.json  package-lock.json  package.json  tsconfig.base.json
services/Gateway/: pom.xml
(+749 files in other folders)
